--- a/index.html
+++ b/index.html
@@ -40,41 +40,7 @@
           </div>
         </div>
       </nav>
-</header>
-     <!-- <header class=" d-flex justify-content-between container fixed">
-          <nav class="navbar navber-expand-lg bg-light">
-            <div class="container-fluid top-fixed">
-                <a class="navbar-brand" href="https://kazi-siam.netlify.app/" target="_blank">
-                    <img src="icons/Logo.png" alt="Logo" width="" height="50" class="d-inline-block align-text-top">
-                  </a>
-            </div>
-          </nav>
-          <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container-fluid">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse mx-5" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" href="#">Products</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" href="#">About Us</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active " href="#">
-                      Contact Us
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-    </header> -->
+  </header>
     <main>
       <section class="container d-flex  align-items-center mt-5">
         <div>
@@ -183,7 +149,7 @@
           </div>
         </div>
       </section>
-      <section class="container">
+      <!-- <section class="container">
             <div class="d-flex">
                 <div class="d-flex gap-4 mt-5">
                   <div>
@@ -219,7 +185,7 @@
                   <img class="img-thumbnail border border-0" src="icons/XMLID 1.png" alt="" width="700">
               </div>
             </div>
-      </section>
+      </section> -->
     </main>
 <footer class="text-center text-white mt-5" style="background-color:gray;">
   <!-- Grid container -->
