--- a/index.html
+++ b/index.html
@@ -149,43 +149,51 @@
           </div>
         </div>
       </section>
-      <!-- <section class="container">
-            <div class="d-flex">
-                <div class="d-flex gap-4 mt-5">
-                  <div>
-                      <img src="icons/image 12.png" alt="" width="100">
-                  </div>
-                  <div>
-                      <h2>Find the Perfect Fit</h2>
-                      <p>Everybody is different, which is why we <br>
-                        offer styles for every body.</p>
-                  </div>
-                </div>
-              <div class="d-flex gap-4 mt-5">
-                <div>
-                  <img src="icons/image 13.png" alt="" width="100">
-                </div>
-                <div>
-                    <h2>Free Exchanges</h2>
-                    <p>One of the many reasons you can shop <br>
-                      with peace of mind.</p>
-                </div>
-              </div>
-              <div class="d-flex gap-4 mt-5">
-                <div>
-                  <img class="image-thumbnail" src="icons/image 14.png" alt="" width="100">
-                </div>
-                <div>
-                    <h2>Contact Our Seller</h2>
-                    <p>They are here to help you. That's quite <br>
-                      literally what we pay them for.</p>
-                </div>
-              </div>
-              <div>
-                  <img class="img-thumbnail border border-0" src="icons/XMLID 1.png" alt="" width="700">
-              </div>
+      <section class="container">
+      <div class="d-flex">
+        <div class="siam-icons">
+          <div class="d-flex gap-4 mt-5">
+            <div>
+              <img src="icons/image 12.png" alt="" width="100" />
             </div>
-      </section> -->
+            <div>
+              <h2>Find the Perfect Fit</h2>
+              <p>
+                Everybody is different, which is why we <br />
+                offer styles for every body.
+              </p>
+            </div>
+          </div>
+          <div class="d-flex gap-5 mt-5">
+            <div>
+              <img src="icons/image 13.png" alt="" width="100" />
+            </div>
+            <div>
+              <h2>Free Exchanges</h2>
+              <p>
+                One of the many reasons you can shop <br />
+                with peace of mind.
+              </p>
+            </div>
+          </div>
+          <div class="d-flex gap-4 mt-5">
+            <div>
+              <img class="image-thumbnail" src="icons/image 14.png" alt="" width="100" />
+            </div>
+            <div>
+              <h2>Contact Our Seller</h2>
+              <p>
+                They are here to help you. That's quite <br />
+                literally what we pay them for.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div>
+          <img class="img-thumbnail border border-0" src="icons/XMLID 1.png" alt="" width="700" />
+        </div>
+      </div>
+    </section>
     </main>
 <footer class="text-center text-white mt-5" style="background-color:gray;">
   <!-- Grid container -->
