--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
               </p>
             </div>
           </div>
-          <div class="d-flex gap-5 mt-5">
+          <div class="d-flex gap-4 mt-5">
             <div>
               <img src="icons/image 13.png" alt="" width="100" />
             </div>
@@ -189,7 +189,7 @@
             </div>
           </div>
         </div>
-        <div>
+        <div class="mx-5">
           <img class="img-thumbnail border border-0" src="icons/XMLID 1.png" alt="" width="700" />
         </div>
       </div>
